--- a/AJAXAPI.html
+++ b/AJAXAPI.html
@@ -46,7 +46,8 @@
   </script>
 
 
-
+  <p>WARNING: if running in chrome and the data isn't showing up due to a mixed content error, go the shield in the far right of the search bar,</br>
+and click load unsafe script. I can't get the https api without paying for it and I like this concept a lot so I don't want to have to go out and find a new one.</br></p>
   <p>The above is from the fixer.io api and displays many global currencies against the euro.</p>
   <p> This API can do currency conversion, but that would require a paid account.</br>
   With the free account I can only display the values against the euro, so that is what I have given here today.</p>
